lots of cleanup work on vehicle health, vehicle input, add RenderTools for rendering utilities.  add npc objective/task/error data to data-watchers and test-rendering -- needs real rendering